<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="mx.spin.mobile.SplashActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/topimgview"
        android:scaleType="centerCrop"
        android:src="@drawable/waves_top" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/logodescr"
        android:src="@drawable/logo" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/contdescBottomImg"
        android:scaleType="centerCrop"
        android:src="@drawable/waves_down" />

</RelativeLayout>
