<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true"
    tools:context="mx.spin.mobile.AnalizeSecondStepActivity">

    <include
        android:id="@+id/include_toolbar"
        layout="@layout/custom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/include_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <include
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                layout="@layout/header_pool" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/lbl_desinfeccion"
                android:textColor="@color/bluetextligth"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/liner_cloro_libre"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/lbl_cloro_libre"
                    android:textColor="@color/white"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1" />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/sp_clorolibre"
                    android:prompt="@string/lbl_select_clorolibre"
                    android:layout_centerVertical="true"
                    android:spinnerMode="dialog"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/liner_clorodpd"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/lbl_cloro_total"
                    android:textColor="@color/white"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1" />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/sp_cloro_total"
                    android:prompt="@string/lbl_select_clorodpd"
                    android:layout_centerVertical="true"
                    android:spinnerMode="dialog"
                    android:layout_weight="1" />

            </LinearLayout>


            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">

                <TextView
                    android:id="@+id/lbl_cloramidas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/lbl_cloraminas"
                    android:textColor="@color/white"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1" />


                <TextView
                    android:id="@+id/txt_cloramidas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:textColor="@color/white"
                    android:gravity="right"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/liner_bromo"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/lbl_bromo"
                    android:textColor="@color/white"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1" />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/sp_bromo"
                    android:prompt="@string/lbl_select_bromo"
                    android:layout_centerVertical="true"
                    android:spinnerMode="dialog"
                    android:layout_weight="1" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/lbl_mas_parametos"
                android:textColor="@color/bluetextligth"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/lbl_turbidez"
                    android:textColor="@color/white"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1" />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/sp_turbidez"
                    android:prompt="@string/lbl_select_turbidez"
                    android:layout_centerVertical="true"
                    android:spinnerMode="dialog"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/lbl_metales_cloro"
                    android:textColor="@color/white"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1" />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/sp_metales"
                    android:layout_centerVertical="true"
                    android:layout_weight="1"
                    android:spinnerMode="dropdown" />

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/lbl_cya"
                    android:textColor="@color/white"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1" />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/sp_cya"
                    android:prompt="@string/lbl_select_cya"
                    android:layout_centerVertical="true"
                    android:spinnerMode="dialog"
                    android:layout_weight="1" />

            </LinearLayout>


            <android.support.v7.widget.CardView
                android:layout_gravity="center_horizontal"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                card_view:cardBackgroundColor="@android:color/white"
                card_view:cardCornerRadius="21dp"
                card_view:cardElevation="6dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="15dp">

                <Button
                    android:id="@+id/btnAnalizeSecondGoResults"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/lbl_btn_resultados"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@android:color/transparent"
                    android:padding="12dp"
                    android:textColor="@android:color/holo_blue_dark" />/>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
